--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ tools/deep_bench/**/playbook.retry
 tools/deep_bench/**/playbook.retry
 tools/deep_bench/windows/clusterjobs.log
 tools/deep_bench/windows/out-*.tar.gz
+
+*.swp
