--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ endif()
 set(CMAKE_FIND_LIBRARY_SUFFIXES ".a" ${CMAKE_FIND_LIBRARY_SUFFIXES})
 
 
-set (Boost_USE_STATIC_LIBS ON)
+set (Boost_USE_STATIC_LIBS ON CACHE BOOL "Use static boost libraries.")
 set (BOOST_COMPONENTS system coroutine)
 if (UNIT_TESTS)
   set (BOOST_COMPONENTS ${BOOST_COMPONENTS} unit_test_framework)
