Add More Test Cases: Fix Comparative, Add vs. Good
Now we include 'good' output for each of the traversal types, as a stage
  1 test (definitely insufficient to really test the traversal). Also,
  the comparative test (see if traverse and newtrav produce same output)
  should work now.

Several other bug fixes that I can't remember.

NOTE: There are currently 20 passing tests, and 19 failing. This is
  known.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -23,9 +23,12 @@ FROM shared AS run
 
 COPY --from=freqhorn-build /freqhorn-build/tools/deep/freqhorn /usr/bin/freqhorn
 COPY --from=freqhorn-build /freqhorn-build/bench_horn /bench_horn
+COPY --from=freqhorn-build /freqhorn-build/grammars /grammars
 COPY files/commitsha /
 COPY tests /freqhorn-test
 
 WORKDIR /freqhorn-test
 ENV PATH="$PATH:/freqhorn-test"
+ENV BENCHDIR="/bench_horn"
+ENV GRAMDIR="/grammars"
 CMD run_tests.sh
