Fix newtrav striped RTL
Also, fixes the "good" output for testing striped, since the Python
script wasn't producing the right output.

NOTE: The traditional "traverse" method is still having issues (namely,
striped RTL); currently 29 tests pass and 10 fail, this is known.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest AS shared
 
-RUN apk --no-cache add boost boost-coroutine boost-context boost-system gmp fuse z3
+RUN apk --no-cache add boost boost-coroutine boost-context boost-system gmp fuse z3 diffutils
 
 FROM shared AS build
 
