Test: Export Test Output From Containers
Previously, if running the test cases inside of a container (with e.g.
--runtime=docker), the output would go to a directory inside of the
container. Now, we bind-mount in a directory from outside, so that the
container can write to the standard location (currently, the directory
"test_output" in the project root). We still allow for users to manually
specify an output directory, which should work now.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -31,4 +31,6 @@ WORKDIR /freqhorn-test
 ENV PATH="$PATH:/freqhorn-test"
 ENV BENCHDIR="/bench_horn"
 ENV GRAMDIR="/grammars"
+# NOTE: If you change this, you must change all of the run*.sh scripts too!
+ENV TESTOUTDIR="/test_output"
 CMD run_tests.sh
