Fix newtrav quantified variables, Small Changes
newtrav wasn't correctly keeping track of the scope of quantified
variables.

Also commit some tools that have been in my working tree for a while:
  - jump_fcontext.gdb : Some GDB functions for dealing with coroutines
    (will likely only work on x86_64 Linux), perhaps only for Boost 1.67
  - timeiters.sh : Prints the length of each iteration of b4simpl
  - rollavg.sh : Prints the current average of all numbers from stdin
    (good for piping in from timeiters.sh)

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,13 @@ tools/deep_bench/windows/clusterjobs.log
 tools/deep_bench/windows/out-*.tar.gz
 
 *.swp
+*.swo
 test/context/files/commitsha
 test_output/
+tags
+compile_commands.json
+
+# A folder with a bunch of miscellaneous stuff that I don't want in the git repo
+old/
+# A set of grammars we don't want committed
+gf_grams/
