Less Verbose Error Messages When Parsing Grammar
Z3 tries to be helpful and print out all of the functions we might have
  meant to call. This, in our case, means it prints out all definitions
  of e.g. the (either ...) function (all 100 of them, one line per
  argument), which means that 1000s of lines get produced as output and
  the original error message (at the top) is lost. Parse the error
  message Z3 throws and don't print the unnecessary parts.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ compile_commands.json
 old/
 # A set of grammars we don't want committed
 gf_grams/
+
+# Newest version of Horn.hpp will produce this unconditionally if --debug is specified.
+chc.dot
