Initial Commit of Refactor
Removes the uneeded files, adds just some skeleton files.
Submodules coming in next commit.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,19 @@
 /llvm-seahorn/
 /seahorn-llvm/
 /gtags.files
+
+.mypy_cache
+.vscode
+.sync
+.tags
+.tags1
+.ipynb_checkpoints
+terraform.tfstate
+terraform.tfstate.backup*
+tools/deep_bench/windows/files/ice.zip
+tools/deep_bench/windows/files/mcmc.zip
+tools/deep_bench/**/.terraform
+tools/deep_bench/**/playbook.retry
+tools/deep_bench/**/playbook.retry
+tools/deep_bench/windows/clusterjobs.log
+tools/deep_bench/windows/out-*.tar.gz
