--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_subdirectory(aeval)
+add_executable (aeval Ae.cpp)
+target_link_libraries(aeval global)
+target_link_libraries (aeval ${Z3_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GMPXX_LIB} ${GMP_LIB})
+install(TARGETS aeval RUNTIME DESTINATION bin)
