Shallow tools/, Update to new Expr Locations

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,2 +1,13 @@
-add_subdirectory(bnd)
-add_subdirectory(deep)
+add_executable (expl BoundedExplorer.cpp)
+target_link_libraries(expl global)
+target_link_libraries (expl ${Z3_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GMPXX_LIB} ${GMP_LIB})
+install(TARGETS expl RUNTIME DESTINATION bin)
+
+add_executable (freqhorn DeepHorn.cpp)
+target_link_libraries(freqhorn global)
+target_link_libraries (freqhorn ${Z3_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GMPXX_LIB} ${GMP_LIB} ${ARMADILLO_LIBRARIES})
+install(TARGETS freqhorn RUNTIME DESTINATION bin)
+
+#add_executable (kind KInduction.cpp)
+#target_link_libraries (kind ${Z3_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GMPXX_LIB} ${GMP_LIB})
+#install(TARGETS kind RUNTIME DESTINATION bin)
