Integrate with Super-Project
Some things have moved, CMakeLists need to be updated, etc.

--- a/tools/sygus/CMakeLists.txt
+++ b/tools/sygus/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(sygustestparser testparser.cpp)
+target_link_libraries(sygustestparser global)
 target_link_libraries(sygustestparser ${Z3_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GMPXX_LIB} ${GMP_LIB})
 #if (BISON_FOUND)
 add_dependencies(sygustestparser SyGuSParserBison)
@@ -6,6 +7,7 @@ add_dependencies(sygustestparser SyGuSParserBison)
 install(TARGETS sygustestparser RUNTIME DESTINATION bin)
 
 add_executable(sygussolver sygussolver.cpp)
+target_link_libraries(sygussolver global)
 target_link_libraries(sygussolver ${Z3_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GMPXX_LIB} ${GMP_LIB})
 #if (BISON_FOUND)
 add_dependencies(sygussolver SyGuSParserBison)
