--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,1 +1,15 @@
-add_subdirectory(sygus)
+add_executable(sygustestparser testparser.cpp)
+target_link_libraries(sygustestparser global)
+target_link_libraries(sygustestparser ${Z3_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GMPXX_LIB} ${GMP_LIB})
+#if (BISON_FOUND)
+add_dependencies(sygustestparser SyGuSParserBison)
+#endif()
+install(TARGETS sygustestparser RUNTIME DESTINATION bin)
+
+add_executable(sygussolver sygussolver.cpp)
+target_link_libraries(sygussolver global)
+target_link_libraries(sygussolver ${Z3_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GMPXX_LIB} ${GMP_LIB})
+#if (BISON_FOUND)
+add_dependencies(sygussolver SyGuSParserBison)
+#endif()
+install(TARGETS sygussolver RUNTIME DESTINATION bin)
