Add Grammar Code And SyGuS Grammar Support
Note that this is an early and volatile version of the grammar code
merger. A more complete version will come later.

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,4 +17,8 @@
 [submodule "sygus"]
 	path = sygus
 	url = ./
-	branch = sygus
+	branch = sygus-gram
+[submodule "gram"]
+	path = gram
+	url = ./
+	branch = gram
