--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,9 +154,14 @@ install(DIRECTORY ${CMAKE_BINARY_DIR}/include/
   )
 
 set(CMAKE_CXX_EXTENSIONS ON)
-add_definitions(-Wno-redeclared-class-member -Wno-sometimes-uninitialized)
-add_definitions(-Wno-covered-switch-default)
-add_definitions(-Wno-inconsistent-missing-override)
+if (NOT WIN32)
+	add_definitions(-Wno-redeclared-class-member)
+	add_definitions(-Wno-sometimes-uninitialized)
+	add_definitions(-Wno-covered-switch-default)
+	add_definitions(-Wno-inconsistent-missing-override)
+else()
+	add_definitions(/bigobj)
+endif()
 set(CMAKE_CXX_STANDARD 11)
 if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
   add_definitions( -Wno-unused-local-typedefs)
